--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Application de gestion de parties de BabyFoot réalisé dans le cadre d'un test technique",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,20 @@
   "bugs": {
     "url": "https://github.com/all-lala/baby_tester/issues"
   },
-  "homepage": "https://github.com/all-lala/baby_tester#readme"
+  "homepage": "https://github.com/all-lala/baby_tester#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "dotenv-flow": "^3.2.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "prettier": "^2.4.1"
+  }
 }
