Routeur + Connexion BDD + Migrations

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+# APPLICATION OPTIONS
 HTTP_PORT=8080
+
+# DATABSE OPTIONS
+DB_USER = "postgres"
+DB_PASSWORD = "postgres"
+DB_NAME = "babytester"
+DB_HOST = "localhost"
+DB_PORT = 5432
