--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,10 @@
         "prettier"
     ],
     "parserOptions": {
-        "ecmaVersion": 12
+        "ecmaVersion": 12,
+        "requireConfigFile": false
     },
     "rules": {
-    }
+    },
+    "parser": "@babel/eslint-parser"
 }
